--- a/exHologramCard.html
+++ b/exHologramCard.html
@@ -19,7 +19,8 @@
         <div class="screen-image"></div>  
         <div class="screen-overlay"></div>  
         <div class="screen-content">
-          <i class="screen-icon fa-brands fa-codepen"></i>
+            <!--<i class="screen-icon fa-brands fa-codepen"></i>-->
+          <img src="slike/logo.png"></img>
           <div class="screen-user">
             <h1 class="name" data-value="HOLOGRAM">HOLOGRAM</h1>
             <a class="link" href="#" target="_blank">@kota011</a>
