Page title changes

--- a/exHackerLetters.html
+++ b/exHackerLetters.html
@@ -8,12 +8,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Hacker text</title>
+    <title> Hacker Text </title>
 </head>
 
 <body class="">
 
-    <h1 data-value="COOL, TEXT EFFECT!!!">COOL, TEXT EFFECT!!!</h1>
+    <h1 data-value="COOL, A TEXT EFFECT!!!">COOL, A TEXT EFFECT!!!</h1>
         
     </div>
     <script type="text/javascript" src="scriptHackerLetters.js"> </script>
