--- a/exHoverGalery.html
+++ b/exHoverGalery.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hover galery</title>
+    <title>Hover Galery</title>
 </head>
 
 <body class="">
