--- a/exHoverLinks.html
+++ b/exHoverLinks.html
@@ -13,9 +13,9 @@
 
 <body class="">
 
-    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">How</a>
-    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">To</a>
-    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">Make</a>
+    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">Hover links</a>
+    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">To see a gradient</a>
+    <a class="link" href="https://youtu.be/oJYFRZ4cj2Q" target="_blank">by kota011</a>
     
     <script type="text/javascript" src="scriptHoverLink.js"> </script>
     </body>
