--- a/exImageStatic.html
+++ b/exImageStatic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="fontovi.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleOne.css">
     <link rel="stylesheet" href="styleImageStatic.css">
     <link rel="icon" href="slike/logo.ico">
     <meta charset="UTF-8">
@@ -12,11 +12,6 @@
 </head>
 
 <body class="">
-
-<div class="slikaDiv pozadina slika2">
-    
-    <div class="" style="height: 130vh;">
-    </div>
 
     <div> <!-- Image with Static -->
         <svg style="display: none;">
@@ -50,11 +45,10 @@
         </svg>
         
         <div id="card" style="margin-left: 5vw;">
-            <img src="slike/911-carrera/neon_1.jpg" alt="911-turbos" />
+            <img src="slike/stock/portrait_4.jpg" alt="image-with-static" />
             <a href="#"> </a>
         </div>
     </div>
-</div>
 
 </body>
 </html>
