--- a/exMenustripLogo.html
+++ b/exMenustripLogo.html
@@ -3,15 +3,15 @@
 <head>
     <link rel="stylesheet" href="fontovi.css">
     <link rel="stylesheet" href="styleOne.css">
-    <link rel="stylesheet" href="styleBlob.css">
     <link rel="icon" href="slike/logo.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blob</title>
+    <title>#</title>
 </head>
 
 <body class="">
+    
     <link rel="stylesheet" href="styleMenustrip.css">
     <div class="logo menustrip" style="height: 7.5vh; width: auto; border-bottom: none;">
         <ul style="float: left; height: 7.5vh; margin: 0; padding: 0;">
@@ -27,9 +27,5 @@
         </ul>
     </div>
 
-        <div id="blob"></div>
-        <div id="blur"></div>
-        <h1 data-value="LOOK, A BLOB">LOOK, A BLOB</h1>
-    <script type="text/javascript" src="scriptBlob.js"> </script>
     </body>
 </html>
