--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <li style="margin: 0; padding: 0;"><a href="index.html"><img src="slike/logo.png" style="height: 7.5vh;"></a>
             <div class="submenu" style="margin-top: 0;">
                 <ul>
-                    <li style="text-align: left;"><a href="gt3rs.html">Latest models</a></li>
+                    <li style="text-align: left;"><a href="#">#</a></li>
+                    <li style="text-align: left;"><a href="#">#</a></li>
                     <li style="text-align: left;"><a href="#">Contact</a></li>
-                    <li style="text-align: left;"><a href="#">Log in</a></li>
                 </ul>
             </div>
         </li>
@@ -121,8 +121,14 @@
 </div>
 
 <!--Body 2-->
-<div class="slikaDiv pozadina slika2">
-    
+<div class="slikaDiv pozadina slika2" style="display: inline-grid; grid-template-columns: auto auto auto;">
+    <!-- Employees -->
+    <img src="slike/stock/img_avatar.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
+    <img src="slike/stock/img_avatar2.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
+    <img src="slike/stock/img_avatar.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
+    <img src="slike/stock/img_avatar2.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
+    <img src="slike/stock/img_avatar.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
+    <img src="slike/stock/img_avatar2.png" alt="Avatar" style="border-radius: 50%; padding: 2em;">
 </div>
 
 <!--Body 3-->
