script image static

--- a/exImageStatic.html
+++ b/exImageStatic.html
@@ -49,6 +49,6 @@
             <a href="#"> </a>
         </div>
     </div>
-
+    <script type="text/javascript" src="scriptImageStatic.js"> </script>
 </body>
 </html>
